--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -167,6 +167,11 @@ const items: CarouselItem[] = [
 <style is:global>
   @import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap');
 
+ body {
+    overflow-x: hidden !important;
+    width: 100%;
+  }
+
   .professional-carousel-wrapper {
     width: 100vw;
     position: relative;
