--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -15,7 +15,7 @@ const items: CarouselItem[] = [
     ctaText: "Explore Wire Free Cameras",
     desktopImage: "/images/Banner/Banner (1).jpg",
     mobileImage: "/images/Banner/Banner (1).jpg",
-    link: "/wire-free"
+    link: "/categories/wireFree"
   },
   {
     title: "Outdoor Cameras",
@@ -23,7 +23,7 @@ const items: CarouselItem[] = [
     ctaText: "Explore Outdoor Cameras",
     desktopImage: "/images/Banner/Banner (2).jpg",
     mobileImage: "/images/Banner/Banner (2).jpg",
-    link: "/outdoor-wifi"
+    link: "/categories/outdoorcamera"
   },
   {
     title: "Indoor Cameras",
@@ -31,7 +31,7 @@ const items: CarouselItem[] = [
     ctaText: "Explore Indoor Cameras",
     desktopImage: "/images/Banner/Banner (3).jpg",
     mobileImage: "/images/Banner/Banner (3).jpg",
-    link: "/indoor-wifi"
+    link: "/categories/indoorcamera"
   }
 ];
 ---
